--- a/package.json
+++ b/package.json
@@ -1,22 +1,71 @@
 {
   "name": "excel-parser",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A way to get up and running quickly with any programming task.",
+  "main": "src/javascript/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/.bin/webpack-dev-server --mode=development --port 8085",
+    "start:cloud9": "node_modules/.bin/webpack-dev-server --inline --progress --port 8080 --host 0.0.0.0 --public $C9_HOSTNAME",
+    "test": "node_modules/.bin/jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/itechdom/excel-parser.git"
+    "url": "git+https://github.com/itechdom/playground.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/itechdom/excel-parser/issues"
+    "url": "https://github.com/itechdom/playground/issues"
   },
-  "homepage": "https://github.com/itechdom/excel-parser#readme",
+  "homepage": "https://github.com/itechdom/playground#readme",
   "dependencies": {
-    "csv-parser": "^2.2.0"
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "autosuggest-highlight": "^3.1.1",
+    "csv-parser": "^2.2.0",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
+    "react": "^16.7.0",
+    "react-autosuggest": "^9.4.3",
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^1.0.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.3.5",
+    "file-loader": "^2.0.0",
+    "image-webpack-loader": "^4.6.0",
+    "jest": "^24.1.0",
+    "json-loader": "^0.5.4",
+    "mobx-devtools-mst": "^0.9.18",
+    "mobx-react-devtools": "^6.0.3",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "3.1.9"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
+      "./setupTests.js"
+    ]
   }
 }
