--- a/package.json
+++ b/package.json
@@ -26,18 +26,27 @@
     "@material-ui/icons": "^3.0.2",
     "autosuggest-highlight": "^3.1.1",
     "csv-parser": "^2.2.0",
+    "formik": "^1.4.2",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "papaparse": "^4.6.3",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.7.0",
+    "react-dropzone": "^10.1.3",
+    "react-image-gallery": "^0.8.16",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-rte": "^0.16.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.1.0",
@@ -55,6 +64,8 @@
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "sass-loader": "^7.1.0",
+    "serverless-apig-s3": "^2.0.0",
+    "serverless-finch": "^2.4.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
