--- a/react+react-native/package.json
+++ b/react+react-native/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "apollo-boost": "^0.1.17",
     "axios": "^0.18.0",
+    "csv-parse": "^4.4.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "mobx": "^5.1.1",
     "mobx-react": "^5.2.8",
     "moment": "^2.23.0",
+    "papaparse": "^4.6.3",
     "react": "^16.5.0",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.5.0",
@@ -35,8 +37,7 @@
     "react-router-dom": "^4.3.1",
     "recompose": "^0.30.0",
     "rrule": "^2.6.0",
-    "socket.io-client": "^2.1.1",
-    "papaparse": "^4.6.3"
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
