--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-rte": "^0.16.1",
+    "recompose": "^0.30.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
