--- a/package.json
+++ b/package.json
@@ -45,11 +45,10 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "papaparse": "^4.6.3",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^1.0.1",
@@ -64,9 +63,11 @@
     "mobx-react-devtools": "^6.0.3",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
+    "papaparse": "^4.6.3",
     "sass-loader": "^7.1.0",
     "serverless-apig-s3": "^2.0.0",
     "serverless-finch": "^2.4.2",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
