--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/javascript/index.js",
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --mode=development --port 8085",
-    "deploy": "./node_modules/.bin/webpack && cp -a dist/bundle.js client/dist/",
+    "deploy": "./node_modules/.bin/webpack && cp -a dist/* client/dist/",
     "start:cloud9": "node_modules/.bin/webpack-dev-server --inline --progress --port 8080 --host 0.0.0.0 --public $C9_HOSTNAME",
     "test": "node_modules/.bin/jest"
   },
