--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formik": "^1.4.2",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
