--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^3.9.0",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.0.0-rc.0",
     "autosuggest-highlight": "^3.1.1",
     "csv-parser": "^2.2.0",
     "formik": "^1.4.2",
